# lab-2

./: .fourmolu.yaml  .gitignore  README.md  bt-bag.cabal  stack.yaml  task.md
.github/workflows/: ci.yaml
src/: Bag.hs  Tree.hs
test/: Spec.hs
